@@ -2,6 +2,7 @@ package com.rafaskoberg.boom;
 
 import com.badlogic.gdx.utils.Disposable;
 import com.rafaskoberg.boom.effect.BoomEffect;
+import com.rafaskoberg.boom.util.BoomError;
 
 import static org.lwjgl.openal.EXTEfx.*;
 
@@ -16,12 +17,19 @@ public abstract class BoomEffectLwjgl3 extends BoomEffect implements Disposable 
 
         // Create effect
         this.alEffect = alGenEffects();
+
+        // Check for errors
+        BoomError.check("Error while creating a BoomEffect");
     }
 
     @Override
     public void dispose() {
+        // Dispose
         alDeleteAuxiliaryEffectSlots(alAuxSlot);
         alDeleteEffects(alEffect);
+
+        // Check for errors
+        BoomError.check("Error while disposing a BoomEffect");
     }
 
 }
